# ruoyi-ai

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  package.json
admin-api/: README.md  openapi.json  pyproject.toml
admin-api/app/api/: admin_auth.py  admin_interfaces.py  admin_pages.py  app_public.py
admin-api/app/core/: config.py  errors.py
admin-api/app/db/: database.py
admin-api/app/repositories/: users.py
admin-api/app/schemas/: common.py
admin-api/app/services/: auth.py  interfaces.py  pages.py  projects.py  public.py  utils.py
admin-api/tests/: test_admin_api.py
backend/agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/agent/app/: main.py
backend/agent/app/api/: audit.py  health.py  sessions.py
backend/agent/app/core/: config.py  errors.py  llm.py  project_secrets.py  third_party_hosts.py
backend/agent/app/db/: database.py
backend/agent/app/graphs/: agent.py  checkpoint_sqlite.py  checkpointer.py  state.py
backend/agent/app/repositories/: sessions.py
backend/agent/app/schemas/: admin_data.py  common.py  session.py
backend/agent/app/services/: admin_client.py  auth_cache.py  conversation.py  event_buffer.py  interface_executor.py
backend/agent/migrations/: 001_initial.sql
backend/agent/scripts/: load_test.py
backend/agent/tests/: test_admin_client.py  test_deploy_config.py  test_graph.py  test_interface_executor.py  test_llm.py  test_project_secrets.py  test_sessions_api.py  test_third_party_hosts.py  test_tools.py
(+79 files in other folders)
