[project]
name = "agent-api"
version = "0.1.0"
description = "Agent service orchestrating read-only admin capabilities via LangGraph."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "aiosqlite>=0.20,<1.0",
    "langgraph>=0.2,<1.0",
    "langgraph-checkpoint-sqlite>=2.0,<3.0",
    "langchain-core>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
